--- a/index.html
+++ b/index.html
@@ -78,51 +78,51 @@
                                     <a href="#">Menu</a>
                                     <ul>
                                         <li><a href="./pages/about.html">About</a></li>
-                                        <li><a href="./team.html">Team</a></li>
-                                        <li><a href="team-details.html">Team Details</a></li>
-                                        <li><a href="testimonials.html">Testimonials</a></li>
-                                        <li><a href="why-choose.html">Why Choose</a></li>
-                                        <li><a href="faq.html">FAQs</a></li>
+                                        <li><a href="./pages/team.html">Team</a></li>
+                                        <li><a href="./pages/team-details.html">Team Details</a></li>
+                                        <li><a href="./pages/testimonials.html">Testimonials</a></li>
+                                        <li><a href="./pages/why-choose.html">Why Choose</a></li>
+                                        <li><a href="./pages/faq.html">FAQs</a></li>
                                         
                                     </ul>
                                 </li>
                                 <li class="dropdown">
                                     <a href="#">Services</a>
                                     <ul>
-                                        <li><a href="services2.html">Services</a></li>
-                                        <li><a href="mobile-applications.html">Mobile Applications</a></li>
-                                        <li><a href="digital-marketing.html">Networking & Cloud Infrastructure</a></li>
-                                        <li><a href="graphic-design.html">Graphic Designing</a></li>
-                                        <li><a href="website-development.html">Website Developments</a></li>
-                                        <li><a href="social-marketing.html">Social Marketings</a></li>
-                                        <li><a href="content-writing.html">CyberSecurity</a></li>
+                                        <li><a href="./pages/services2.html">Services</a></li>
+                                        <li><a href="./pages/mobile-applications.html">Mobile Applications</a></li>
+                                        <li><a href="./pages/digital-marketing.html">Networking & Cloud Infrastructure</a></li>
+                                        <li><a href="./pages/graphic-design.html">Graphic Designing</a></li>
+                                        <li><a href="./pages/website-development.html">Website Developments</a></li>
+                                        <li><a href="./pages/social-marketing.html">Social Marketings</a></li>
+                                        <li><a href="./pages/./pages/content-writing.html">CyberSecurity</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown">
                                     <a href="#">Projects</a>
                                     <ul>
-                                        <li><a href="project.html">Projects</a></li>
-                                        <li><a href="project-details.html">Project Details</a></li>
+                                        <li><a href="./pages/project.html">Projects</a></li>
+                                        <li><a href="./pages/project-details.html">Project Details</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown">
                                     <a href="#">Shop</a>
                                     <ul>
-                                        <li><a href="products.html">Products</a></li>
-                                        <li><a href="product-details.html">Product Details </a></li>
-                                        <li><a href="cart.html">Cart</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
+                                        <li><a href="./pages/products.html">Products</a></li>
+                                        <li><a href="./pages/product-details.html">Product Details </a></li>
+                                        <li><a href="./pages/cart.html">Cart</a></li>
+                                        <li><a href="./pages/./pages/checkout.html">Checkout</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown">
                                     <a href="#">Blog</a>
                                     <ul>
-                                        <li><a href="blog.html">Blog Posts</a></li>
-                                        <li><a href="blog-sidebar.html">Blog Sidebar</a></li>
-                                        <li><a href="blog-details.html">Blog Details</a></li>
+                                        <li><a href="./pages/blog.html">Blog Posts</a></li>
+                                        <li><a href="./pages/blog-sidebar.html">Blog Sidebar</a></li>
+                                        <li><a href="./pages./pages/blog-details.html">Blog Details</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="./pages/./pages/contact.html">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                                     <div class="main-slider__content">
                                         <p>Welcome to our digital  world</p>
                                         <h2>the Right Tech <br> Solution for <br> Business</h2>
-                                        <a href="about.html" class="thm-btn">Discover More</a>
+                                        <a href="./pages/about.html" class="thm-btn">Discover More</a>
                                     </div>
                                 </div>
                             </div>
@@ -215,7 +215,7 @@
                                     <div class="main-slider__content">
                                         <p>Welcome to our cable Management Infrustrature </p>
                                         <h2>the Right design <br> for Organizations<br> and Businesses</h2>
-                                        <a href="about.html" class="thm-btn">Discover More</a>
+                                        <a href="./pages/about.html" class="thm-btn">Discover More</a>
                                     </div>
                                 </div>
                             </div>
@@ -244,7 +244,7 @@
                                     <div class="main-slider__content">
                                         <p>Welcome to our digital cctv surveillance system</p>
                                         <h2>the Right design <br> for Businesses and <br> Homes</h2>
-                                        <a href="about.html" class="thm-btn">Discover More</a>
+                                        <a href="./pages/about.html" class="thm-btn">Discover More</a>
                                     </div>
                                 </div>
                             </div>
@@ -341,7 +341,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <p class="services-one__find-solutions-text">IPness services built specifically for your
-                                business. <a href="about.html">Find Your Solution</a></p>
+                                business. <a href="./pages/about.html">Find Your Solution</a></p>
                         </div>
                     </div>
                 </div>
@@ -1102,7 +1102,7 @@
                                                     </div>
                                                     <h3 class="tabs-content__experience-title">We have over 10 years of
                                                         experience</h3>
-                                                    <a href="about.html" class="tabs-content__experience-btn">Read
+                                                    <a href="./pages/about.html" class="tabs-content__experience-btn">Read
                                                         More</a>
                                                 </div>
                                                 <div class="tabs-content__experience-img">
@@ -1155,7 +1155,7 @@
                                                     </div>
                                                     <h3 class="tabs-content__experience-title">We have over 10 years of
                                                         experience</h3>
-                                                    <a href="about.html" class="tabs-content__experience-btn">Read
+                                                    <a href="./pages/about.html" class="tabs-content__experience-btn">Read
                                                         More</a>
                                                 </div>
                                                 <div class="tabs-content__experience-img">
@@ -1207,7 +1207,7 @@
                                                     </div>
                                                     <h3 class="tabs-content__experience-title">We have over 10 years of
                                                         experience</h3>
-                                                    <a href="about.html" class="tabs-content__experience-btn">Read
+                                                    <a href="./pages/about.html" class="tabs-content__experience-btn">Read
                                                         More</a>
                                                 </div>
                                                 <div class="tabs-content__experience-img">
@@ -1224,7 +1224,7 @@
                 </div>
                 <div class="financial-advice__bottom">
                     <p class="financial-advice__bottom-text">IPness services built specifically for your business. <a
-                            href="about.html">Find Your Solution</a></p>
+                            href="./pages/about.html">Find Your Solution</a></p>
                 </div>
             </div>
         </section>
@@ -1352,7 +1352,7 @@
                                 <h2 class="cta-one__title">the passion we use to handle every single<br> project is Remarkable</h2>
                             </div>
                             <div class="cta-one__right">
-                                <a href="contact.html" class="cta-one__btn thm-btn">let’s get started</a>
+                                <a href="./pages/contact.html" class="cta-one__btn thm-btn">let’s get started</a>
                             </div>
                         </div>
                     </div>
@@ -1432,11 +1432,11 @@
                                 <div class="footer-widget__column footer-widget__links clearfix">
                                     <h3 class="footer-widget__title">Links</h3>
                                     <ul class="footer-widget__links-list list-unstyled clearfix">
-                                        <li><a href="about.html">About Us</a></li>
-                                        <li><a href="about.html">Our Mission</a></li>
-                                        <li><a href="team.html">Meet the Team</a></li>
-                                        <li><a href="project.html">Our Projects</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="./pages/about.html">About Us</a></li>
+                                        <li><a href="./pages/about.html">Our Mission</a></li>
+                                        <li><a href="./pages/team.html">Meet the Team</a></li>
+                                        <li><a href="./pages/project.html">Our Projects</a></li>
+                                        <li><a href="./pages/contact.html">Contact</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -1445,9 +1445,9 @@
                                     <h3 class="footer-widget__title">Explore</h3>
                                     <ul class="footer-widget__explore-list list-unstyled clearfix">
                                         <li><a href="services.html">What We Offer</a></li>
-                                        <li><a href="about.html">Our Story</a></li>
-                                        <li><a href="blog.html">Latest News</a></li>
-                                        <li><a href="about.html">Help Center</a></li>
+                                        <li><a href="./pages/about.html">Our Story</a></li>
+                                        <li><a href="./pages/blog.html">Latest News</a></li>
+                                        <li><a href="./pages/about.html">Help Center</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -1483,8 +1483,8 @@
                                     </div>
                                     <div class="site-footer__bottom-right">
                                         <ul class="list-unstyled site-footer__bottom-menu">
-                                            <li><a href="about.html">Terms & Conditions</a></li>
-                                            <li><a href="about.html">Privacy Policy</a></li>
+                                            <li><a href="./pages/about.html">Terms & Conditions</a></li>
+                                            <li><a href="./pages/about.html">Privacy Policy</a></li>
                                         </ul>
                                     </div>
                                 </div>
