--- a/pages/why-choose.html
+++ b/pages/why-choose.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Why Choose || IPness || IPness HTML Template For Business</title>
     <!-- favicons Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
-    <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/images/favicons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicons/favicon-16x16.png" />
+    <link rel="manifest" href="../assets/images/favicons/site.webmanifest" />
     <meta name="description" content="Qutiiz HTML Template For Business" />
 
     <!-- fonts -->
@@ -25,36 +25,36 @@
         rel="stylesheet">
 
 
-    <link rel="stylesheet" href="assets/vendors/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/vendors/animate/animate.min.css" />
-    <link rel="stylesheet" href="assets/vendors/animate/custom-animate.css" />
-    <link rel="stylesheet" href="assets/vendors/fontawesome/css/all.min.css" />
-    <link rel="stylesheet" href="assets/vendors/jarallax/jarallax.css" />
-    <link rel="stylesheet" href="assets/vendors/jquery-magnific-popup/jquery.magnific-popup.css" />
-    <link rel="stylesheet" href="assets/vendors/nouislider/nouislider.min.css" />
-    <link rel="stylesheet" href="assets/vendors/nouislider/nouislider.pips.css" />
-    <link rel="stylesheet" href="assets/vendors/odometer/odometer.min.css" />
-    <link rel="stylesheet" href="assets/vendors/swiper/swiper.min.css" />
-    <link rel="stylesheet" href="assets/vendors/qutiiz-icons/style.css">
-    <link rel="stylesheet" href="assets/vendors/qutiiz-icons-two/style.css">
-    <link rel="stylesheet" href="assets/vendors/tiny-slider/tiny-slider.min.css" />
-    <link rel="stylesheet" href="assets/vendors/reey-font/stylesheet.css" />
-    <link rel="stylesheet" href="assets/vendors/owl-carousel/owl.carousel.min.css" />
-    <link rel="stylesheet" href="assets/vendors/owl-carousel/owl.theme.default.min.css" />
-    <link rel="stylesheet" href="assets/vendors/bxslider/jquery.bxslider.css" />
-    <link rel="stylesheet" href="assets/vendors/bootstrap-select/css/bootstrap-select.min.css" />
-    <link rel="stylesheet" href="assets/vendors/vegas/vegas.min.css" />
-    <link rel="stylesheet" href="assets/vendors/jquery-ui/jquery-ui.css" />
-    <link rel="stylesheet" href="assets/vendors/timepicker/timePicker.css" />
+    <link rel="stylesheet" href="../assets/vendors/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/animate/animate.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/animate/custom-animate.css" />
+    <link rel="stylesheet" href="../assets/vendors/fontawesome/css/all.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/jarallax/jarallax.css" />
+    <link rel="stylesheet" href="../assets/vendors/jquery-magnific-popup/jquery.magnific-popup.css" />
+    <link rel="stylesheet" href="../assets/vendors/nouislider/nouislider.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/nouislider/nouislider.pips.css" />
+    <link rel="stylesheet" href="../assets/vendors/odometer/odometer.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/swiper/swiper.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/qutiiz-icons/style.css">
+    <link rel="stylesheet" href="../assets/vendors/qutiiz-icons-two/style.css">
+    <link rel="stylesheet" href="../assets/vendors/tiny-slider/tiny-slider.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/reey-font/stylesheet.css" />
+    <link rel="stylesheet" href="../assets/vendors/owl-carousel/owl.carousel.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/owl-carousel/owl.theme.default.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/bxslider/jquery.bxslider.css" />
+    <link rel="stylesheet" href="../assets/vendors/bootstrap-select/css/bootstrap-select.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/vegas/vegas.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/jquery-ui/jquery-ui.css" />
+    <link rel="stylesheet" href="../assets/vendors/timepicker/timePicker.css" />
 
     <!-- template styles -->
-    <link rel="stylesheet" href="assets/css/qutiiz.css" />
-    <link rel="stylesheet" href="assets/css/qutiiz-responsive.css" />
+    <link rel="stylesheet" href="../assets/css/qutiiz.css" />
+    <link rel="stylesheet" href="../assets/css/qutiiz-responsive.css" />
 </head>
 
 <body>
     <div class="preloader">
-        <img class="preloader__image" width="60" src="assets/images/loader.png" alt="" />
+        <img class="preloader__image" width="60" src="../assets/images/loader.png" alt="" />
     </div>
     <!-- /.preloader -->
     <div class="page-wrapper">
@@ -63,14 +63,14 @@
                 <div class="main-menu-wrapper clearfix">
                     <div class="main-menu-wrapper__left">
                         <div class="main-menu-wrapper__logo">
-                            <a href="index.html"><img src="assets/images/resources/logo-1.png" alt=""></a>
+                            <a href="../index.html"><img src="../assets/images/resources/logo-1.png" alt=""></a>
                         </div>
                         <div class="main-menu-wrapper__main-menu">
                             <a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
                             <ul class="main-menu__list">
 
                                 <li class="dropdown megamenu">
-                                    <a href="index.html">Home </a>
+                                    <a href="../index.html">Home </a>
                                     
                                 </li>
 
@@ -152,7 +152,7 @@
 
         <!--Page Header Start-->
         <section class="page-header">
-            <div class="page-header-bg" style="background-image: url(assets/images/backgrounds/page-header-bg.jpg)">
+            <div class="page-header-bg" style="background-image: url(../assets/images/backgrounds/page-header-bg.jpg)">
             </div>
             <div class="page-header-border"></div>
             <div class="page-header-border page-header-border-two"></div>
@@ -168,7 +168,7 @@
             <div class="container">
                 <div class="page-header__inner">
                     <ul class="thm-breadcrumb list-unstyled">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="../index.html">Home</a></li>
                         <li class="active">Why Choose</li>
                     </ul>
                     <h2>Why Choose</h2>
@@ -185,7 +185,7 @@
                     <div class="col-xl-6">
                         <div class="welcome-one__img wow slideInLeft" data-wow-delay="100ms" data-wow-duration="2500ms">
                             <div class="welcome-one__img-inner">
-                                <img src="assets/images/update1.0/resources/welcome-v1-img1.jpg" alt="" />
+                                <img src="../assets/images/update1.0/resources/welcome-v1-img1.jpg" alt="" />
                             </div>
                         </div>
                     </div>
@@ -275,7 +275,7 @@
         <section class="qutiiz-ready-two">
             <div class="qutiiz-ready-two-bg-box">
                 <div class="qutiiz-ready-two-bg jarallax" data-jarallax data-speed="0.2" data-imgPosition="50% 0%"
-                    style="background-image: url(assets/images/backgrounds/qutiiz-ready-two-bg.jpg)"></div>
+                    style="background-image: url(../assets/images/backgrounds/qutiiz-ready-two-bg.jpg)"></div>
             </div>
             <div class="container">
                 <div class="row">
@@ -342,7 +342,7 @@
                         <div class="why-choose-one__left wow fadeInLeft" data-wow-delay="100ms"
                             data-wow-duration="2500ms">
                             <div class="why-choose-one__img">
-                                <img src="assets/images/resources/why-choose-one-img.jpg" alt="">
+                                <img src="../assets/images/resources/why-choose-one-img.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -356,7 +356,7 @@
 							This expertise can be beneficial in providing comprehensive IT solutions, technical support, and consulting services to meet your business needs.</p>
                             <div class="why-choose-one__bottom">
                                 <div class="why-choose-one__bottom-img">
-                                    <img src="assets/images/resources/why-choose-one-bottom-img.jpg" alt="">
+                                    <img src="../assets/images/resources/why-choose-one-bottom-img.jpg" alt="">
                                 </div>
                                 <ul class="list-unstyled why-choose-one__points">
                                     <li>
@@ -432,34 +432,34 @@
                 }}'>
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-1.png" alt="">
+                            <img src="../assets/images/brand/brand-1-1.png" alt="">
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-2.png" alt="">
+                            <img src="../assets/images/brand/brand-1-2.png" alt="">
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-3.png" alt="">
+                            <img src="../assets/images/brand/brand-1-3.png" alt="">
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-4.png" alt="">
+                            <img src="../assets/images/brand/brand-1-4.png" alt="">
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-5.png" alt="">
+                            <img src="../assets/images/brand/brand-1-5.png" alt="">
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-1.png" alt="">
+                            <img src="../assets/images/brand/brand-1-1.png" alt="">
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-2.png" alt="">
+                            <img src="../assets/images/brand/brand-1-2.png" alt="">
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-3.png" alt="">
+                            <img src="../assets/images/brand/brand-1-3.png" alt="">
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-4.png" alt="">
+                            <img src="../assets/images/brand/brand-1-4.png" alt="">
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-5.png" alt="">
+                            <img src="../assets/images/brand/brand-1-5.png" alt="">
                         </div><!-- /.swiper-slide -->
                     </div>
                 </div>
@@ -498,7 +498,7 @@
                         <div class="col-xl-4 col-lg-4 wow animated fadeInUp" data-wow-delay="0.1s">
                             <div class="business-growth-one__single">
                                 <div class="business-growth-one__single-img">
-                                    <img src="assets/images/update1.0/resources/business-growth-v1-img1.jpg" alt="" />
+                                    <img src="../assets/images/update1.0/resources/business-growth-v1-img1.jpg" alt="" />
                                 </div>
                                 <div class="business-growth-one__single-content">
                                     <h3><a href="#">Perfect Solution that your <br>Business Demands</a></h3>
@@ -513,7 +513,7 @@
                         <div class="col-xl-4 col-lg-4 wow animated fadeInUp" data-wow-delay="0.3s">
                             <div class="business-growth-one__single">
                                 <div class="business-growth-one__single-img">
-                                    <img src="assets/images/update1.0/resources/business-growth-v1-img2.jpg" alt="" />
+                                    <img src="../assets/images/update1.0/resources/business-growth-v1-img2.jpg" alt="" />
                                 </div>
                                 <div class="business-growth-one__single-content">
                                     <h3><a href="#">Perfect Solution that your <br>Business Demands</a></h3>
@@ -528,7 +528,7 @@
                         <div class="col-xl-4 col-lg-4 wow animated fadeInUp" data-wow-delay="0.5s">
                             <div class="business-growth-one__single">
                                 <div class="business-growth-one__single-img">
-                                    <img src="assets/images/update1.0/resources/business-growth-v1-img3.jpg" alt="" />
+                                    <img src="../assets/images/update1.0/resources/business-growth-v1-img3.jpg" alt="" />
                                 </div>
                                 <div class="business-growth-one__single-content">
                                     <h3><a href="#">Perfect Solution that your <br>Business Demands</a></h3>
@@ -574,7 +574,7 @@
                     <div class="site-footer__top-inner">
                         <div class="site-footer__top-left">
                             <div class="site-footer__top-logo">
-                                <a href="index.html"><img src="assets/images/resources/footer-logo.png" alt=""></a>
+                                <a href="../index.html"><img src="../assets/images/resources/footer-logo.png" alt=""></a>
                             </div>
                             <div class="site-footer__top-title-box">
                                 <h3 class="site-footer__top-title">Let's work together just drop me a line - <a
@@ -594,7 +594,7 @@
             </div>
             <div class="site-footer__middle">
                 <div class="site-footer-shape"
-                    style="background-image: url(assets/images/shapes/site-footer-shape.png)"></div>
+                    style="background-image: url(../assets/images/shapes/site-footer-shape.png)"></div>
                 <div class="container">
                     <div class="site-footer__middle-inner">
                         <div class="row">
@@ -713,7 +713,7 @@
             <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
 
             <div class="logo-box">
-                <a href="index.html" aria-label="logo image"><img src="assets/images/resources/logo-1.png" width="155"
+                <a href="../index.html" aria-label="logo image"><img src="../assets/images/resources/logo-1.png" width="155"
                         alt="" /></a>
             </div>
             <!-- /.logo-box -->
@@ -765,34 +765,34 @@
     <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a>
 
 
-    <script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
-    <script src="assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendors/jarallax/jarallax.min.js"></script>
-    <script src="assets/vendors/jquery-ajaxchimp/jquery.ajaxchimp.min.js"></script>
-    <script src="assets/vendors/jquery-appear/jquery.appear.min.js"></script>
-    <script src="assets/vendors/jquery-circle-progress/jquery.circle-progress.min.js"></script>
-    <script src="assets/vendors/jquery-magnific-popup/jquery.magnific-popup.min.js"></script>
-    <script src="assets/vendors/jquery-validate/jquery.validate.min.js"></script>
-    <script src="assets/vendors/nouislider/nouislider.min.js"></script>
-    <script src="assets/vendors/odometer/odometer.min.js"></script>
-    <script src="assets/vendors/swiper/swiper.min.js"></script>
-    <script src="assets/vendors/tiny-slider/tiny-slider.min.js"></script>
-    <script src="assets/vendors/wnumb/wNumb.min.js"></script>
-    <script src="assets/vendors/wow/wow.js"></script>
-    <script src="assets/vendors/isotope/isotope.js"></script>
-    <script src="assets/vendors/countdown/countdown.min.js"></script>
-    <script src="assets/vendors/owl-carousel/owl.carousel.min.js"></script>
-    <script src="assets/vendors/bxslider/jquery.bxslider.min.js"></script>
-    <script src="assets/vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
-    <script src="assets/vendors/vegas/vegas.min.js"></script>
-    <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
-    <script src="assets/vendors/timepicker/timePicker.js"></script>
+    <script src="../assets/vendors/jquery/jquery-3.6.0.min.js"></script>
+    <script src="../assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/vendors/jarallax/jarallax.min.js"></script>
+    <script src="../assets/vendors/jquery-ajaxchimp/jquery.ajaxchimp.min.js"></script>
+    <script src="../assets/vendors/jquery-appear/jquery.appear.min.js"></script>
+    <script src="../assets/vendors/jquery-circle-progress/jquery.circle-progress.min.js"></script>
+    <script src="../assets/vendors/jquery-magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="../assets/vendors/jquery-validate/jquery.validate.min.js"></script>
+    <script src="../assets/vendors/nouislider/nouislider.min.js"></script>
+    <script src="../assets/vendors/odometer/odometer.min.js"></script>
+    <script src="../assets/vendors/swiper/swiper.min.js"></script>
+    <script src="../assets/vendors/tiny-slider/tiny-slider.min.js"></script>
+    <script src="../assets/vendors/wnumb/wNumb.min.js"></script>
+    <script src="../assets/vendors/wow/wow.js"></script>
+    <script src="../assets/vendors/isotope/isotope.js"></script>
+    <script src="../assets/vendors/countdown/countdown.min.js"></script>
+    <script src="../assets/vendors/owl-carousel/owl.carousel.min.js"></script>
+    <script src="../assets/vendors/bxslider/jquery.bxslider.min.js"></script>
+    <script src="../assets/vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
+    <script src="../assets/vendors/vegas/vegas.min.js"></script>
+    <script src="../assets/vendors/jquery-ui/jquery-ui.js"></script>
+    <script src="../assets/vendors/timepicker/timePicker.js"></script>
 
 
 
 
     <!-- template js -->
-    <script src="assets/js/qutiiz.js"></script>
+    <script src="../assets/js/qutiiz.js"></script>
 </body>
 
 </html>
